--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="#">Help</a></li>
         </ul>
         <form class="navbar-form navbar-right" ng-submit="search()">
-          <input type="text" class="form-control" placeholder="Search..." ng-module="searchText">
+          <input type="text" class="form-control" placeholder="Search..." ng-model="searchText">
         </form>
       </div>
     </div>
